# eia-ts-project

./: README.md
eia-timeseries/: pyproject.toml
eia-timeseries/scripts/: analyze_region.py  debug_data.py  fetch_latest.py  test_apis.py
eia-timeseries/src/eia_timeseries/: __init__.py  analyzer.py  config.py  data_collector.py  eia_client.py  weather_client.py
